2005-07-17  Roland Illig  <roland.illig@gmx.de>

	* util.c: Added ascii_alpha_to_cntrl(), which converts 'x' to
	^X. Useful for entering control characters literally.
	* util.h: Likewise.
	* widget.c: Use that function after C-q.

2005-07-17  Roland Illig  <roland.illig@gmx.de>

	* view.c: The viewer can remember the last file position and
	restore it, like the editor. This fixes Savannah bug #13734.
	* view.h: Likewise.
	* setup.c: Likewise.

2005-07-14  Roland Illig  <roland.illig@gmx.de>

	* util.c (get_compression_type): Use an enumeration instead of
	an int for the return type.
	* util.h: Likewise.

2005-07-13  Roland Illig  <roland.illig@gmx.de>

	* view.c: Always call display() before close_error_pipe() to make
	sure the screen looks nice.
	http://mail.gnome.org/archives/mc-devel/2005-July/msg00194.html

2005-07-12  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added some paragraph comments. Changed some literal
	expressions (e.g. 0 => '\0', 0 => NULL). Fixed indentation.
	* view.c (view_hexedit_save_changes): Use the VFS file functions
	instead of the native ones. This makes it possible to edit
	remote files using the hex editor.

2005-07-11  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_update_bytes_per_line): Use a local variable to
	do the computation. Update view->bytes_per_line only once, after
	all computations have finished.

2005-07-09  Pavel Tsekov  <ptsekov@gmx.net>

	* info.c (info_show_info): Properly calculate the length of the
	line drawn by hline().

2005-07-07  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_ccache_find): Replaced the linear search with a
	binary search. This speeds up the viewer by a factor of 25 for
	large files (> 100 MB).

2005-07-07  Roland Illig  <roland.illig@gmx.de>

	* dialog.h: Replaced object-like macros with implicit references
	to an identifier ``h'' with function-like macros. Adjusted all
	users.
	* dialog.c: Likewise.
	* find.c: Likewise.
	* tree.c: Likewise.
	* widget.c: Likewise.