@@ -1464,3 +1464,13 @@ ascii_alpha_to_cntrl (int ch)
     }
     return ch;
 }
+
+extern const char *
+gettext_ui (const char *s)
+{
+    const char *result, *sep;
+
+    result = _(s);
+    sep = strchr(result, '|');
+    return (sep != NULL) ? sep + 1 : result;
+}
